panko/tests/testsuite/snapshots/testsuite__typeck-panko__tests__cases__execute__linkage__test_define_function_with_extern.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/execute/linkage/test_define_function_with_extern.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/linkage/test_define_function_with_extern.c"
   (declaration external printf~0 `fn(∅: ptr<char const>, ...) -> int` ∅)
   (function-definition external
      f~1 `fn(x: int) -> void`
      (params
         x~3 `int`)
      (compound-statement
         (expression
            (call `int`
               (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>`
                  (printf~0 `fn(∅: ptr<char const>, ...) -> int`))
               (noop-type-conversion `ptr<char const>`
                  (noop-type-conversion `ptr<char>`
                     (addressof `ptr<array<char; 10>>`
                        (string `array<char; 10>` "in f: %d\n\0"))))
               (add `int` (x~3 `int`) (1 `int`))))))
   (function-definition external
      main~4 `fn() -> int`
      (compound-statement
         (expression
            (call `void`
               (addressof `ptr<fn(x: int) -> void>`
                  (f~1 `fn(x: int) -> void`))
               (4 `int`))))))

----- stderr -----
