panko/tests/testsuite/snapshots/testsuite__typeck-panko__tests__cases__execute__linkage__test_error_multiple_definitions_of_external_function.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/execute/linkage/test_error_multiple_definitions_of_external_function/f1.c
    - panko/tests/cases/execute/linkage/test_error_multiple_definitions_of_external_function/f2.c
    - panko/tests/cases/execute/linkage/test_error_multiple_definitions_of_external_function/main.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/linkage/test_error_multiple_definitions_of_external_function/f1.c"
   (function-definition external
      f~0 `fn() -> int`
      (compound-statement
         (return (10 `int`)))))
(translation-unit "panko/tests/cases/execute/linkage/test_error_multiple_definitions_of_external_function/f2.c"
   (function-definition external
      f~0 `fn() -> int`
      (compound-statement
         (return (20 `int`)))))
(translation-unit "panko/tests/cases/execute/linkage/test_error_multiple_definitions_of_external_function/main.c"
   (declaration external f~0 `fn() -> int` ∅)
   (function-definition external
      main~1 `fn() -> int`
      (compound-statement
         (return
            (call `int`
               (addressof `ptr<fn() -> int>`
                  (f~0 `fn() -> int`)))))))

----- stderr -----
