panko/tests/testsuite/snapshots/testsuite__typeck-panko__tests__cases__execute__linkage__test_internal_linkage_functions_are_not_globally_visible.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/execute/linkage/test_internal_linkage_functions_are_not_globally_visible/f.c
    - panko/tests/cases/execute/linkage/test_internal_linkage_functions_are_not_globally_visible/g.c
    - panko/tests/cases/execute/linkage/test_internal_linkage_functions_are_not_globally_visible/main.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/linkage/test_internal_linkage_functions_are_not_globally_visible/f.c"
   (declaration external puts~0 `fn(∅: ptr<char const>) -> int` ∅)
   (function-definition internal
      function~1 `fn() -> void`
      (compound-statement
         (expression
            (call `int`
               (addressof `ptr<fn(∅: ptr<char const>) -> int>`
                  (puts~0 `fn(∅: ptr<char const>) -> int`))
               (noop-type-conversion `ptr<char const>`
                  (noop-type-conversion `ptr<char>`
                     (addressof `ptr<array<char; 2>>`
                        (string `array<char; 2>` "f\0"))))))))
   (function-definition external
      f~3 `fn() -> void`
      (compound-statement
         (expression
            (call `void`
               (addressof `ptr<fn() -> void>`
                  (function~1 `fn() -> void`)))))))
(translation-unit "panko/tests/cases/execute/linkage/test_internal_linkage_functions_are_not_globally_visible/g.c"
   (declaration external puts~0 `fn(∅: ptr<char const>) -> int` ∅)
   (function-definition internal
      function~1 `fn() -> void`
      (compound-statement
         (expression
            (call `int`
               (addressof `ptr<fn(∅: ptr<char const>) -> int>`
                  (puts~0 `fn(∅: ptr<char const>) -> int`))
               (noop-type-conversion `ptr<char const>`
                  (noop-type-conversion `ptr<char>`
                     (addressof `ptr<array<char; 2>>`
                        (string `array<char; 2>` "g\0"))))))))
   (function-definition external
      g~3 `fn() -> void`
      (compound-statement
         (expression
            (call `void`
               (addressof `ptr<fn() -> void>`
                  (function~1 `fn() -> void`)))))))
(translation-unit "panko/tests/cases/execute/linkage/test_internal_linkage_functions_are_not_globally_visible/main.c"
   (declaration external puts~0 `fn(∅: ptr<char const>) -> int` ∅)
   (declaration external f~1 `fn() -> void` ∅)
   (declaration external g~2 `fn() -> void` ∅)
   (function-definition external
      function~3 `fn() -> void`
      (compound-statement
         (expression
            (call `int`
               (addressof `ptr<fn(∅: ptr<char const>) -> int>`
                  (puts~0 `fn(∅: ptr<char const>) -> int`))
               (noop-type-conversion `ptr<char const>`
                  (noop-type-conversion `ptr<char>`
                     (addressof `ptr<array<char; 9>>`
                        (string `array<char; 9>` "function\0"))))))))
   (function-definition external
      main~5 `fn() -> int`
      (compound-statement
         (expression
            (call `void`
               (addressof `ptr<fn() -> void>`
                  (f~1 `fn() -> void`))))
         (expression
            (call `void`
               (addressof `ptr<fn() -> void>`
                  (g~2 `fn() -> void`))))
         (expression
            (call `void`
               (addressof `ptr<fn() -> void>`
                  (function~3 `fn() -> void`)))))))

----- stderr -----
