panko/tests/testsuite/snapshots/testsuite__typeck-panko__tests__cases__execute__linkage__test_redeclare_static_function_without_static.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/execute/linkage/test_redeclare_static_function_without_static.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/linkage/test_redeclare_static_function_without_static.c"
   (declaration internal f~0 `fn() -> int` ∅)
   (declaration internal f~0 `fn() -> int` ∅)
   (declaration internal g~2 `fn() -> int` ∅)
   (declaration internal g~2 `fn() -> int` ∅)
   (function-definition external
      main~4 `fn() -> int`
      (compound-statement
         (return
            (add `int`
               (call `int`
                  (addressof `ptr<fn() -> int>`
                     (f~0 `fn() -> int`)))
               (call `int`
                  (addressof `ptr<fn() -> int>`
                     (g~2 `fn() -> int`)))))))
   (function-definition internal
      f~0 `fn() -> int`
      (compound-statement
         (return (42 `int`))))
   (function-definition internal
      g~2 `fn() -> int`
      (compound-statement
         (return (7 `int`)))))

----- stderr -----
