panko/tests/testsuite/snapshots/testsuite__typeck-panko__tests__cases__execute__linkage__test_redeclare_tentative_definition_of_static_variable.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/execute/linkage/test_redeclare_tentative_definition_of_static_variable.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/linkage/test_redeclare_tentative_definition_of_static_variable.c"
   (tentative-definition internal x~0 `int` ∅)
   (function-definition external
      main~1 `fn() -> int`
      (compound-statement
         (return (x~0 `int`))))
   (definition internal x~0 `int` (42 `int`)))

----- stderr -----
